data/derived/fa15/progs/unify/prog0151.ml.out
Characters 77-86:
  | Sine a -> "sin(pi*" exprToString a ")"
              ^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
